fixed layout problems, improved /bookings, minor fixes/improvements

--- a/styles/App.css
+++ b/styles/App.css
@@ -11,12 +11,6 @@
     font-family: 'helvetica neue';
 }
 
-.app {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-}
-
 a {
     text-decoration: none;
     color: inherit;
